# active-inference-sim-lab

./: .clang-format  .coveragerc  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_FINAL.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_v4.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT_v4.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_v4_COMPLETION_REPORT.md  BACKLOG.md  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_NOTES.md  Dockerfile  Dockerfile.production  Dockerfile.secure  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Makefile  PROJECT_CHARTER.md  README.md  SDLC_IMPLEMENTATION_SUMMARY.md  SECURITY.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_REPORT.md  TERRAGON_SDLC_FINAL_REPORT.md  advanced_sdlc_demo.py  autonomous_enhancement_report.json  autonomous_generation_1_demo.py  (+48 more)
.devcontainer/: devcontainer.json  post-create.sh  postCreate.sh
.github/: CODEOWNERS  codeql-config.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  security.yml
.github/workflows/: production.yml
.terragon/: COMPREHENSIVE_ENHANCEMENT_SUMMARY.md  EXECUTION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PERPETUAL_VALUE_CYCLE_COMPLETE.md  README.md  autonomous-executor.py  ci-automation-implementation.py  config.yaml  continuous-improvement.yaml  run_discovery.py  scoring-engine.py  security-analysis-SEC-001.md  value-metrics.json
cmake/: ActiveInferenceConfig.cmake.in  ActiveInferenceSimLabConfig.cmake.in
cpp/src/: bindings.cpp
cpp/src/core/: free_energy.cpp  free_energy.hpp
cpp/tests/: main.cpp  test_free_energy.cpp
demo_benchmarks/: novel_benchmark_report_1755453863.json  novel_benchmark_report_1755812322.json  novel_benchmark_results_1755453863.json  novel_benchmark_results_1755812322.json
deployment/: config_production.yaml  docker-compose.production.yml  github_workflow_template.yml  performance_config.json  production.py  production_config.json  security_config.json  simple_production.py
deployment/k8s/: deployment.yaml  hpa.yaml
docs/: DEVELOPMENT.md  FAQ.md  Makefile  ROADMAP.md  SETUP_REQUIRED.md  api_specification.json  conf.py  deployment_guide.md  index.rst
docs/adr/: 0001-use-hybrid-cpp-python-architecture.md  001-technology-stack.md  002-inference-algorithms.md  README.md
docs/guides/: README.md
docs/monitoring/: comprehensive-observability.md  observability-setup.md  performance-benchmarking.md
docs/runbooks/: incident-response.md  monitoring.md
docs/vscode-config/: README.md  extensions.json  launch.json  settings.json  tasks.json
docs/workflows/: IMPLEMENTATION_GUIDE.md  README.md  WORKFLOW_SETUP.md  advanced-ci-cd.md  autonomous-value-discovery.md  ci-cd-complete.md  ci-cd-setup.md  dependabot.yml
docs/workflows/templates/: ci.yml  performance.yml  security-scan.yml  security.yml  value-discovery.yml
examples/: advanced_research_demo.py  basic_agent_demo.py  complete_sdlc_demo.py  config_basic.yaml  config_grid_world.yaml  config_social.yaml
monitoring/: alerts.yml  grafana_dashboard.json  prometheus.yml
monitoring/grafana/datasources/: prometheus.yml
scripts/: release.sh
security/: sbom-generator.py
src/: CMakeLists.txt
src/python/active_inference/: __init__.py  cli.py
src/python/active_inference/core/: __init__.py  adaptive_agent.py  agent.py  beliefs.py  circuit_breaker.py  free_energy.py  generative_model.py
src/python/active_inference/deployment/: __init__.py  containers.py  production.py
src/python/active_inference/environments/: __init__.py  grid_world.py  gym_wrapper.py  mock_env.py  social_environment.py  social_environment.py.backup
src/python/active_inference/inference/: __init__.py  belief_updater.py  variational.py
src/python/active_inference/monitoring/: __init__.py  agent_telemetry.py  comprehensive_telemetry.py  health_monitor.py
src/python/active_inference/optimization/: performance_optimization.py
src/python/active_inference/performance/: __init__.py  adaptive_performance.py  advanced_optimization.py  caching.py  gpu_optimization.py  optimization.py  parallel_processing.py
src/python/active_inference/planning/: __init__.py  active_planner.py  expected_free_energy.py  trajectory_optimizer.py
src/python/active_inference/reliability/: fault_tolerance.py
src/python/active_inference/research/: __init__.py  advanced_algorithms.py  analysis.py  benchmarks.py  cognitive_architectures.py  continual_learning.py  experiments.py  novel_benchmarks.py  validation.py
src/python/active_inference/scalability/: __init__.py  auto_scaling.py  distributed_processing.py  multi_agent_orchestrator.py
src/python/active_inference/security/: threat_detection.py
src/python/active_inference/utils/: __init__.py  advanced_validation.py  caching.py  graceful_degradation.py  health_check.py  logging.py  logging_config.py  retry_mechanisms.py  security.py  security_middleware.py  validation.py
tests/: README.md  conftest.py
tests/benchmark/: test_benchmark_example.py
tests/contract/: test_api_contracts.py
tests/cpp/: CMakeLists.txt  test_inference_engine.cpp  test_main.cpp  test_matrix_operations.cpp  test_planning_engine.cpp
tests/e2e/: test_complete_workflows.py
tests/integration/: test_auto_scaling.py  test_environment_integration.py  test_integration_example.py  test_performance_monitoring.py
tests/load/: locustfile.py
tests/mutation/: conftest.py
tests/performance/: test_benchmarks.py
tests/unit/: test_active_inference_agent.py  test_circuit_breaker.py  test_example.py  test_sample.py  test_security_validation.py
tests/utils/: __init__.py  helpers.py
